Improve map log

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -4,7 +4,7 @@ description: Taking notes to remember my place with the maps I'm creating
 image: ./mapping-log-1.jpg
 imageAlt: Photo of wooden desktop with hand-drawn, paper map and edge of laptop
 imageAnchor: "https://github.com/LL782/mundoko-maps/"
-title: "Mapping Log 1 - taking notes so I don't loose my sense of direction"
+title: "Mundoko Maps Log - taking notes so I don't loose my sense of direction"
 ---
 
 The repo is at [github.com/LL782/mundoko-maps/](https://github.com/LL782/mundoko-maps/) but that's not where I was at when I left off.
@@ -15,18 +15,18 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
 - [x] Created [a Contentful space](https://app.contentful.com/spaces/zy8ufabt1tm0/)
 - [x] Drafted [the model for a Map Tile content type](https://app.contentful.com/spaces/zy8ufabt1tm0/content_types/mapTile/fields)
-- [x] Decided to use coordinates of the centre of each tile along with scale and a fixed tile size to pin-point each tile. Previously I was using a pair of coordinates to describe the top-left and bottom-right corners of each tile.
+- [x] Decided to use the coordinates of the centre of each tile, along with the scale, and a fixed tile size to pin-point each tile. Previously I was using a pair of coordinates to describe the top-left and bottom-right corners of each tile.
 
-  - e.g. before `5140000,5150000x5150000,5160000` and after `5145000,5155000`
-  - I now have tile titles like, `e-5145--s-5155--city--topo` or `e-{east}--s-{south}--{scale}--{type}`
+  - e.g. before `5140000,5150000x5150000,5160000` after `5145000,5155000`
+  - I now have tile titles like, `--e-5145--s-5155--city--topo` or `--e-{east}--s-{south}--{scale}--{type}`
 
-- [x] Learned that in Contentful `asset` content has a `file` field that can be changed, leaving the asset ID, title and description in place
-  - So given a tile's image is redrafted, when contentful has to be updated, then the only place to change is the `file` field
-- [x] Published [a single city scale tile](https://app.contentful.com/spaces/zy8ufabt1tm0/entries/6ciH7fjDaJE1CASvSIuUcy) and [the first few images of town scale tiles](https://app.contentful.com/spaces/zy8ufabt1tm0/assets) that fit within that city tile
+- [x] Learned that in Contentful each `asset` has a `file` field that can be changed, leaving the asset ID, title and description in place
+  - So given a tile's image is redrafted, when Contentful has to be updated, then the only place to change is the `file` field, metadata and links to the image will be preserved
+- [x] Published [a single city scale tile](https://app.contentful.com/spaces/zy8ufabt1tm0/entries/6ciH7fjDaJE1CASvSIuUcy) and [the first few images of town scale tiles](https://app.contentful.com/spaces/zy8ufabt1tm0/assets) that fit within thaw smaller scale tile
 
 ## Doing
 
-- [ ] Cropping the first 25 town scale tile images
+- [x] Cropping the first 25 town scale tile images
 - [ ] Publishing tiles in Contentful that corrispond to each of these
 - [ ] Planning to replace this manual effort with scripts
 
@@ -34,12 +34,12 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
 - [ ] Build a UI that links from the city scale tile down to the 25 town scale tiles laid out in a grid
 - [ ] Write a script that can crop a city scale tile into 25 town scale tiles automagically
-  - There's a library called [Jimp](https://www.npmjs.com/package/jimp) that does cropping programmatically
+  - There's a package called [Jimp](https://www.npmjs.com/package/jimp) that does programmatic cropping
 - [ ] Build a system that automagically crops a city tile into town tiles and publishes them on Contentful
 
 > will I/did I add any notes that couldn't have been attached directly to specific issues?
 
-Perhaps not but I realise that's not the reason why I'm not just creating a project in the repo to "log" all of this.
+Perhaps not but I realise that's not the reason why I'm not just creating a project in the repo to "log" all of this
 
-1. When I started this "notes" section of my website it was to bring things together to one place.
-1. This "note" gives me a fast way to read and write an overview, precisely because it's all on one page. 
+1. When I started this keeping notes on this website, it was to bring things together in one place
+1. This here "note" gives me a fast way to read and write an overview, precisely because it's all one page
