Update “Notes to enhance comprehension…” paragraph

--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -47,7 +47,9 @@ It's all a balance really.
 
 ## Notes to enhance comprehension and future discoverability
 
-[Work in progress] <Emoji label="fingers-crossed">🤞</Emoji>
+In the end none of the tabs I had open ended up in this channel. 
+
+So, I considered deleting it but didn't because I think it's a valid option. Sometimes having an unused option makes decision making easier 🤔 If you don't have the full range of options in front of you it can be hard to get down to the decision making. 
 
 ## Observations while I did this
 
