Update open tabs note

--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -26,8 +26,9 @@ I have loads of tabs open. I have a few options for what to do with each one:
 
 ## My intention
 
-- Clear my head after my most recent engagement (I work as a consultant and change engagements fairly frequently)
-- Nurture that self-trust where you say to yourself, "I'll come back to that later" – and then you actually do.
+My intention is to clear my head. Originally I wrote this post at the end of an engagement. I work as a consultant and change engagements fairly frequently. Since then I've come back to it to read the list above as part of keeping my workspace a bit tidier.
+
+Respecting this whole process is a way to nurture that self-trust where you say to yourself, "I'll come back to that later", and then you actually do.
 
 ## Am I procrastinating?
 
