Improve title line length

--- a/content/notes/enfj-personality.mdx
+++ b/content/notes/enfj-personality.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-12-29
 description: A note of my Myers Briggs personality type test result, taken today
-title: My personality type is "Assertive Protagonist", according to a test I took just now
+title: My personality type is "Assertive Protagonist", according to a test I just took
 ---
 
 ' just wanted to make a note of this. I wonder if it may change over time.
