Improve link list consistency

--- a/content/notes/enfj-personality.mdx
+++ b/content/notes/enfj-personality.mdx
@@ -8,8 +8,8 @@ title: My personality type is "Assertive Protagonist", according to a test I jus
 
 I took the test today (2021-12-29) at [16personalities.com](https://www.16personalities.com) and the result was:
 
-- I'm an ["Assertive Protagonist"](https://www.16personalities.com/enfj-personality)
-- Code: `ENFJ-A`
+- Type: [`Assertive Protagonist`](https://www.16personalities.com/enfj-personality)
+- Code: [`ENFJ-A`](https://www.16personalities.com/articles/assertive-protagonist-enfj-a-vs-turbulent-protagonist-enfj-t)
 - Role: [`Diplomat`](https://www.16personalities.com/articles/roles-diplomats)
 - Strategy: [`People Mastery`](https://www.16personalities.com/articles/strategies-people-mastery)
 
