Add to note about map filename format

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -19,6 +19,7 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
   - e.g. before `5140000,5150000x5150000,5160000` after `5145000,5155000`
   - I now have tile titles like, `--e-5145--s-5155--city--topo` or `--e-{east}--s-{south}--{scale}--{type}`
+  - 👆_Still not convinced with that file name format_
 
 - [x] Learned that in Contentful each `asset` has a `file` field that can be changed, leaving the asset ID, title and description in place
   - So given a tile's image is redrafted, when Contentful has to be updated, then the only place to change is the `file` field, metadata and links to the image will be preserved
