Add link for more info about why I write

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -42,5 +42,5 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
 Perhaps not but I realise that's not the reason why I'm not just creating a project in the repo to "log" all of this
 
-1. When I started this keeping notes on this website, it was to bring things together in one place
+1. When I started this [keeping notes on this website thing](https://www.laurencelord.co.uk/notes/i-am-writing-for-myself), it was to bring things together in one place
 1. This here "note" gives me a fast way to read and write an overview, precisely because it's all one page
