Update personally really with new readings

--- a/content/notes/enfj-personality.mdx
+++ b/content/notes/enfj-personality.mdx
@@ -15,6 +15,15 @@ I took the test today (2021-12-29) at [16personalities.com](https://www.16person
 
 Public profile: [https://www.16personalities.com/profiles/29394ceb14cb7](https://www.16personalities.com/profiles/29394ceb14cb7)
 
+I took the test again (2021-12-30) with only slightly different results:
+
+- Type: [`Turbulent Protagonist`](https://www.16personalities.com/enfj-personality) (new detail but same link as before)
+- Code: [`ENFJ-T`](https://www.16personalities.com/articles/assertive-protagonist-enfj-a-vs-turbulent-protagonist-enfj-t) (new detail but same link as before)
+- Role: [`Diplomat`](https://www.16personalities.com/articles/roles-diplomats)  (same result as before)
+- Strategy: [`Social Engagement`](https://www.16personalities.com/articles/strategies-social-engagement) (new result)
+
+The most noticeable variance was moving from 56% assertive to 51% turbulent in the [Identity](https://www.16personalities.com/articles/identity-assertive-vs-turbulent) metric. This would suggest my level of confidence fluctuates, which rings true, and my strategy goes from "People Mastery" to "Social Engagement", which sounds nicer. It's interesting how much affect moving across the 50% border (of these binary spectra) has on the results. One day you are "assertive" and the next you're "turbulent". Fair enough, it's just worth noting it's not an exact science that's behind the results, and personally, most of my results are within 10% of this middle ground, so there are likely to be traits from different types that apply to me in different situations.  
+
 I haven't read all this yet, as now is not the time. It's interesting stuff though and reminds me of reading about my classification in the [Chinese Zodiac](https://en.wikipedia.org/wiki/Chinese_zodiac)
 
 Funnily enough, I got that feeling while reading my current managers personality type, which is ["Architect"](https://www.16personalities.com/intj-personality). I was imagining I'd take the test and that would be my type too! Funny how certain writing can give that kind of impression.
