--- a/content/notes/default-value-functions.mdx
+++ b/content/notes/default-value-functions.mdx
@@ -3,7 +3,7 @@ date: 2022-02-11
 description: "When destructing a Javascript object, the default value can be a function call and the function call is only called if the default value is used"
 image: ./default-value-functions.png
 imageAlt: Image of the code example pasted into a Javascript console
-title: "Today I learnt more about how default values in Javascript, Typescript or Node can work"
+title: "Today I learnt that in Javascript, Typescript or Node, object-destructuring default-values can be function-calls"
 ---
 
 This learning assumes good knowledge of [**Destructuring assignment in Javascript**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment), Typescript or Node. See these MDN docs linked to here for a foundation in this, particularly [Object destructuring](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#object_destructuring) and default values.
