Update and rename open-tabs-of-2021-04.mdx to open-tabs-2021.mdx

--- a/content/notes/open-tabs-2021.mdx
+++ b/content/notes/open-tabs-2021.mdx
@@ -1,7 +1,9 @@
 ---
-title: Mental tidying. I'm going through my open tabs and taking a note of anything worth keeping. It's my first day on the bench and this is helping me to take stock of different things I am interested in and make plans for what to do next
+title: A process for clearing open tabs
 date: 2021-04-06T16:08
 ---
+
+**Mental tidying. I'm going through my open tabs and taking a note of anything worth keeping. It's my first day on the bench and this is helping me to take stock of different things I am interested in and make plans for what to do next**
 
 I have loads of tabs open. I have a few options for what to do with each one:
 
