--- a/content/notes/open-tabs-2021.mdx
+++ b/content/notes/open-tabs-2021.mdx
@@ -3,7 +3,10 @@ title: A process for clearing open tabs
 date: 2021-04-06T16:08
 ---
 
-**Mental tidying. I'm going through my open tabs and taking a note of anything worth keeping. It's my first day on the bench and this is helping me to take stock of different things I am interested in and make plans for what to do next**
+What follows is a story from 2021-04-06 (the roots of this note). I revisit it and reapply the process it describes. I'm keeping the narrative element for now as it doesn't get in the way of referencing the process.
+
+
+## Mental tidying. I'm going through my open tabs and taking a note of anything worth keeping. It's my first day on the bench and this is helping me to take stock of different things I am interested in and make plans for what to do next
 
 I have loads of tabs open. I have a few options for what to do with each one:
 
