--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -4,10 +4,10 @@ description: My planning of personal projects takes on a new level as I set up o
 image: ./the-overview-enters.jpg
 imageAlt: Stylised photograph, with slightly skewed angles, high contrast with muted colours. A desk with a laptop and stacks of paper
 imageLink: https://github.com/users/LL782/projects/1
-title: Enter the Overview, a single project including the issues across all my personal projects
+title: Enter The Overview, views of all issues across all my personal projects
 ---
 
-[The Overview](https://github.com/users/LL782/projects/1) - a GitHub project where I can see everything in one place. I don't want to repeat everything from the project README but let's note the objectives at least:
+[The Overview](https://github.com/users/LL782/projects/1) - a GitHub project where I can see everything in one place. It is on the level of my profile rather than attached to a specific repository. The objectives are as follows:
 
 1. Easy to view how everything is going
 1. A landing page for, What to work on
@@ -17,7 +17,7 @@ title: Enter the Overview, a single project including the issues across all my p
 
 ### How's it going?
 
-Feels good so far. I'm still getting everything visible (see [LL782 #2](https://github.com/LL782/LL782/issues/2)) and loving the insights already.
+Feels good so far. I'm still getting everything visible (see [Ensure all existing issues are visible in The Overview – LL782 #2](https://github.com/LL782/LL782/issues/2)) but getting great insights already.
 
 ### Highlights <Emoji label="nerd face">🤓</Emoji>
 
