--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -34,5 +34,4 @@ Feels good so far. I'm still getting everything visible (see [Ensure all existin
 ### Ponderings <Emoji label="thinking face">🤔</Emoji>
 
 1. Repos are not projects – the terms shouldn't be used interchangeably
-1. A repo without a project behind it doesn't get included in The Overview
-1. It this going to help me get more done or is it a distraction. The old procrastination question
+1. Is this going to help me get more done or is it a distraction? The old procrastination question
