Improve Enter The Overview title punctuation

--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -4,7 +4,7 @@ description: My planning of personal projects takes on a new level as I set up o
 image: ./the-overview-enters.jpg
 imageAlt: Stylised photograph, with slightly skewed angles, high contrast with muted colours. A desk with a laptop and stacks of paper
 imageLink: https://github.com/users/LL782/projects/1
-title: Enter The Overview, views of all issues across all my personal projects
+title: Enter The Overview – views of all issues across all my personal projects
 ---
 
 [The Overview](https://github.com/users/LL782/projects/1) - a GitHub project where I can see everything in one place. It is on the level of my profile rather than attached to a specific repository. The objectives are as follows:
