--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -4,12 +4,12 @@ description: My planning of personal projects takes on a new level as I set up o
 image: ./the-overview-enters.jpg
 imageAlt: Stylised photograph, with slightly skewed angles, high contrast with muted colours. A desk with a laptop and stacks of paper
 imageLink: https://github.com/users/LL782/projects/1
-title: Enter The Overview – views of all issues across all my personal projects
+title: Enter The Overview – all my personal projects gathered together
 ---
 
-[The Overview](https://github.com/users/LL782/projects/1) - a GitHub project where I can see everything in one place. It is on the level of my profile rather than attached to a specific repository. The objectives are as follows:
+[**The Overview**](https://github.com/users/LL782/projects/1) lets me zoom out from a single personal project and see issues from across my whole profile in one place. I think of (Scrum of Scrums)[https://www.atlassian.com/agile/scrum/scrum-of-scrums] – this is a project of projects. The objectives are as follows:
 
-1. Easy to view how everything is going
+1. Easy to view all workflows together
 1. A landing page for, What to work on
 1. Cross pollinate planning approachs
 
@@ -21,17 +21,18 @@ Feels good so far. I'm still getting everything visible (see [Ensure all existin
 
 ### Highlights <Emoji label="nerd face">🤓</Emoji>
 
-1. It's **easier to balance tasks** on different projects when they are listed along side one another
-1. There's a Marie Kondo thing – put everything into **one pile** and the reality (and absurdity) of how much is there becomes clearer
-1. I've deleted or archived a bunch of repos
+1. It's **easier to prioritise issues** of different projects when they are listed together
+1. There's a Marie Kondo thing – put everything into **one pile** and the reality (and absurdity) of how much there is becomes clear
+1. I've deleted or archived a bunch of repos without much hesitation. The level of abstraction makes it **easier to refine my scope**
 
 ### Observations <Emoji label="electric torch">🔦</Emoji>
 
-1. Lots of the repos don't have projects or milestones
+1. Lots of the repos I consider important don't have projects or milestones
 1. There is manual effort required to ensure all issues get visiblility in The Overview
-1. I haven't done high level planning on most of the projects yet
+1. I haven't done high level planning on most of the projects before now
 
 ### Ponderings <Emoji label="thinking face">🤔</Emoji>
 
 1. Repos are not projects – the terms shouldn't be used interchangeably
-1. Is this going to help me get more done or is it a distraction? The old procrastination question
+1. Is this going to help me get more done or is it a distraction? The old procrastination question 
+1. I hope to measure the success of this by seeing a few of the projects mature and progress
