--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -34,5 +34,6 @@ Feels good so far. I'm still getting everything visible (see [Ensure all existin
 ### Ponderings <Emoji label="thinking face">🤔</Emoji>
 
 1. Repos are not projects – the terms shouldn't be used interchangeably
-1. Is this going to help me get more done or is it a distraction? The old procrastination question 
-1. I hope to measure the success of this by seeing a few of the projects mature and progress
+2. Should I continue to maintain individual projects on a repository level?
+3. Is this going to help me get more done or is it a distraction? The old procrastination question 
+4. I hope to measure the success of this by seeing a few of the projects mature and progress
