--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -22,7 +22,7 @@ Feels good so far. I'm still getting everything visible (see [Ensure all existin
 ### Highlights <Emoji label="nerd face">🤓</Emoji>
 
 1. It's **easier to prioritise issues** of different projects when they are listed together
-1. There's a Marie Kondo thing – put everything into **one pile** and the reality (and absurdity) of how much there is becomes clear
+1. There's a Marie Kondo thing – put everything into **one pile** and the absurdity of how much you have becomes clear
 1. I've deleted or archived a bunch of repos without much hesitation. The level of abstraction makes it **easier to refine my scope**
 
 ### Observations <Emoji label="electric torch">🔦</Emoji>
