--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -7,7 +7,7 @@ imageLink: https://github.com/users/LL782/projects/1
 title: Enter The Overview – all my personal projects gathered together
 ---
 
-[**The Overview**](https://github.com/users/LL782/projects/1) lets me zoom out from a single personal project and see issues from across my whole profile in one place. I think of (Scrum of Scrums)[https://www.atlassian.com/agile/scrum/scrum-of-scrums] – this is a project of projects. The objectives are as follows:
+[**The Overview**](https://github.com/users/LL782/projects/1) lets me zoom out from a single personal project and see issues from across my whole profile in one place. I think of [Scrum of Scrums](https://www.atlassian.com/agile/scrum/scrum-of-scrums) – this is a project of projects. The objectives are as follows:
 
 1. Easy to view all workflows together
 1. A landing page for, What to work on
