Correct typo "approaches"

--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -11,7 +11,7 @@ title: Enter The Overview – all my personal projects gathered together
 
 1. Easy to view all workflows together
 1. A landing page for, What to work on
-1. Cross pollinate planning approachs
+1. Cross pollinate planning approaches
 
 ## Notes
 
