--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -23,7 +23,7 @@ Feels good so far. I'm still getting everything visible (see [Ensure all existin
 
 1. It's **easier to prioritise issues** of different projects when they are listed together
 1. There's a Marie Kondo thing – put everything into **one pile** and the absurdity of how much you have becomes clear
-1. I've deleted or archived a bunch of repos without much hesitation. The level of abstraction makes it **easier to refine my scope**
+1. I've deleted or archived a bunch of repos without much hesitation. It's **easier to refine scope** from this long view
 
 ### Observations <Emoji label="electric torch">🔦</Emoji>
 
