--- a/content/notes/default-value-functions.mdx
+++ b/content/notes/default-value-functions.mdx
@@ -6,7 +6,7 @@ imageAlt: Image of the code example pasted into a Javascript console
 title: "Today I learnt that in Javascript, Typescript or Node, object-destructuring default-values can be function-calls"
 ---
 
-This learning assumes good knowledge of [**Destructuring assignment in Javascript**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment), Typescript or Node. See these MDN docs linked to here for a foundation in this, particularly [Object destructuring](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#object_destructuring) and default values.
+This learning assumes good knowledge of [**Destructuring assignment in Javascript**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment), Typescript or Node. See these MDN docs for a foundation in this, particularly [Object destructuring](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#object_destructuring) and default values.
 
 ## Today I learnt
 
