--- a/content/notes/enfj-personality.mdx
+++ b/content/notes/enfj-personality.mdx
@@ -26,4 +26,4 @@ The most noticeable variance was moving from 56% assertive to 51% turbulent in t
 
 I haven't read all this yet, as now is not the time. It's interesting stuff though and reminds me of reading about my classification in the [Chinese Zodiac](https://en.wikipedia.org/wiki/Chinese_zodiac)
 
-Funnily enough, I got that feeling while reading my current managers personality type, which is ["Architect"](https://www.16personalities.com/intj-personality). I was imagining I'd take the test and that would be my type too! Funny how certain writing can give that kind of impression.
+Funnily enough, I got that feeling while reading my current manager's personality type, which is ["Architect"](https://www.16personalities.com/intj-personality). I was imagining I'd take the test and that would be my type too! Funny how certain writing can give that kind of impression.
