Fix typo in mapping-log

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -23,7 +23,7 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
 - [x] Learned that in Contentful each `asset` has a `file` field that can be changed, leaving the asset ID, title and description in place
   - So given a tile's image is redrafted, when Contentful has to be updated, then the only place to change is the `file` field, metadata and links to the image will be preserved
-- [x] Published [a single city scale tile](https://app.contentful.com/spaces/zy8ufabt1tm0/entries/6ciH7fjDaJE1CASvSIuUcy) and [the first few images of town scale tiles](https://app.contentful.com/spaces/zy8ufabt1tm0/assets) that fit within thaw smaller scale tile
+- [x] Published [a single city scale tile](https://app.contentful.com/spaces/zy8ufabt1tm0/entries/6ciH7fjDaJE1CASvSIuUcy) and [the first few images of town scale tiles](https://app.contentful.com/spaces/zy8ufabt1tm0/assets) that fit within that smaller scale tile
 
 ## Doing
 
