--- a/content/notes/the-overview-enters.mdx
+++ b/content/notes/the-overview-enters.mdx
@@ -17,17 +17,17 @@ title: Enter The Overview – all my personal projects gathered together
 
 ### How's it going?
 
-Feels good so far. I'm still getting everything visible (see [Ensure all existing issues are visible in The Overview – LL782 #2](https://github.com/LL782/LL782/issues/2)) but getting great insights already.
+Feels good so far. I've made visible everything already in flight (see [Ensure all existing issues are visible in The Overview – LL782 #2](https://github.com/LL782/LL782/issues/2)) and I'm getting some great insights already.
 
 ### Highlights <Emoji label="nerd face">🤓</Emoji>
 
-1. It's **easier to prioritise issues** of different projects when they are listed together
+1. It's **easier to rank priorities of issues** of different projects when they are all listed together
 1. There's a Marie Kondo thing – put everything into **one pile** and the absurdity of how much you have becomes clear
 1. I've deleted or archived a bunch of repos without much hesitation. It's **easier to refine scope** from this long view
 
 ### Observations <Emoji label="electric torch">🔦</Emoji>
 
-1. Lots of the repos I consider important don't have projects or milestones
+1. Lots of the repos I considered important did't have projects or milestones until I did this
 1. There is manual effort required to ensure all issues get visiblility in The Overview
 1. I haven't done high level planning on most of the projects before now
 
