Add recent observation to Mundoko Maps post

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -44,3 +44,11 @@ Perhaps not but I realise that's not the reason why I'm not just creating a proj
 
 1. When I started this [keeping notes on this website thing](https://www.laurencelord.co.uk/notes/i-am-writing-for-myself), it was to bring things together in one place
 1. This here "note" gives me a fast way to read and write an overview, precisely because it's all one page
+
+_It's six months later now 2022-06 and I'd like to iterate on that last statement..._
+
+1. It's advantageous to see an overview in one place. 
+1. Blogging about how the project is going allows me to get back into it after a break.
+1. There's value in those items, especially the in progress ones, being in my work planner too.
+
+The third point feeds into an note I published a few months after this. The Overview -- it's about my decision to create an aggregation project in GitHub to present issues across multiple repos in a single view. 
