As link to texts in a bit

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -49,6 +49,6 @@ _It's six months later now 2022-06 and I'd like to iterate on that last statemen
 
 1. It's advantageous to see an overview in one place. 
 1. Blogging about how the project is going allows me to get back into it after a break.
-1. There's value in those items, especially the in progress ones, being in my work planner too.
+1. There's value in the items, especially the in progress ones, being in a work planner too.
 
-The third point feeds into an note I published a few months after this. The Overview -- it's about my decision to create an aggregation project in GitHub to present issues across multiple repos in a single view. 
+The third point feeds into an note I published a few months after originally publishing this one -- [The Overview](/notes/the-overview-enters) It's about my decision to create an aggregation project in GitHub to for issues across multiple repos in a single view. 
