Second draft of "lead-time-misunderstood"

--- a/content/notes/lead-time-misunderstood.mdx
+++ b/content/notes/lead-time-misunderstood.mdx
@@ -4,12 +4,12 @@ description: I just discovered that Lead Time talks about code commited to code 
 title: "The DORA Metric Lead Time measure how long it takes to get commited code into production. What about the time spent leading up to that?"
 ---
 
-So Googling around the **DORA Metric** for **Lead Time** is commonly accepted to be **from the moment code is commited until code in working in production**
+So Googling around the **DORA Metric** for **Lead Time** I find it is commonly accepted to be **from the moment code is commited until there is code working in production**
 
-That makes sense – it's a great metric for measuring quality infrastructure and pipelines.
+That makes sense – it's a great metric for measuring the quality of infrastructure and pipelines – and obviously some of the work done to deliver value to the customer. But what about all the time spent on work leading up to that. I'd always assumed that was part of the standard metric too:
 
-Today I discovered that. See, for the last however many years I thought one of the four key metrics was measuring **how long it takes to a get a new idea infront of customers**
+**How long it takes to a get a new idea to a customer**
 
 That is obviously harder to measure but seems more important in many ways.
 
-_To be continued_
+I imagine I'll keep pondering this for some time to come <Emoji label="thinking face">🤔</Emoji>
