Fix typos, refine text

--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -7,11 +7,11 @@ imageLink: /
 title: "'Why' is not important to answer when it comes to what I'm doing at a given time. On the otherhand, How and What am I doing instead are valuable questions to get into the habit of answering"
 ---
 
-Before I get into this, there are other places where I espouse the importance of 'Why'. Project planning is one such place, briefing a team on work to be done is another. So meet me part way in this communication, if you want to get the most out of it. I'm putting forward an idea that has value to me (the source) and through effective reinterpretation it can have value to you too.
+Before I get into this, there are other places where I espouse the importance of 'Why'. Project planning is one such place, briefing a team on work to be done is another. So meet me part way in this communication if you want to get the most out of it. I'm putting forward an idea that has value to me (the source) and through effective reinterpretation it can have value to you too (the destination).
 
-Okay, so here's a little more context. This line of thought follows on from catching myself in the act of deviating from the plan – or put another way – what do I do instead when I planned to do one thing, but end up doing another.
+Okay, so here's a little more context: This line of thought follows on from catching myself in the act of deviating from a given plan. Or put another way, What do I do instead when I planned to do one thing but end up doing another?
 
-I'm trying to catch myself in the act of doing this. Here's one I caught earlier: I plan to work on a personal project but instead I end up washing the dishes. Interestingly since catching that I don't do it anymore. Further context around this deceptively mundane topic is that I'm doing some work that involves looking at my existing tendencies and with a desire to make changes. In actual fact the desire is to get more personal projects done and the approach I'm employing is better neuro lingistic programming. So naturally, seemingly mundane things come up and some prove themselves to be significant complications.
+I'm trying to catch myself in the act of doing this. I caught this one earlier: I plan to work on a personal project but instead I end up washing the dishes. Interestingly since catching that I don't do it anymore. Further context around this deceptively mundane topic is that I'm doing some work that involves looking at my existing tendencies and with a desire to make changes. In actual fact the desire is to get more personal projects done and the approach I'm employing is better neuro lingistic programming. So naturally, seemingly mundane things come up and some prove themselves to be significant complications.
 
 So back to the original note: Answering What and How instead of Why is advised in certain self-reflection scenarios. That leads me to ask, which "What" and "How" questions are valuable?
 
