--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -4,7 +4,7 @@ description: A quick note for myself about weighing up the value of different ha
 image: ./why-is-not-always-important.jpg
 imageAlt: Semi-abstract, close angled photography of dense, seemily chaotic writing on paper
 imageLink: /
-title: "'Why' is not important to answer when it comes to what I'm doing at a given time. On the otherhand, How and What am I doing instead are valuable questions to get into the habit of answering"
+title: "'Why' is not important to answer when it comes to what I'm doing at a given time. Instead, How and What are valuable questions to get into the habit of answering"
 ---
 
 Before I get into this, there are other places where I espouse the importance of 'Why'. Project planning is one such place, briefing a team on work to be done is another. So meet me part way in this communication if you want to get the most out of it. I'm putting forward an idea that has value to me (the source) and through effective reinterpretation it can have value to you too (the destination).
