--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -11,7 +11,7 @@ Before I get into this, there are other places where I espouse the importance of
 
 Okay, so here's a little more context: This line of thought follows on from catching myself in the act of deviating from a given plan. Or put another way, What do I do instead when I planned to do one thing but end up doing another?
 
-I'm trying to catch myself in the act of doing this. I caught this one earlier: I plan to work on a personal project but instead I end up washing the dishes. Interestingly since catching that I don't do it anymore. Further context around this deceptively mundane topic is that I'm doing some work that involves looking at my existing tendencies and with a desire to make changes. In actual fact the desire is to get more personal projects done and the approach I'm employing is better neuro lingistic programming. So naturally, seemingly mundane things come up and some prove themselves to be significant complications.
+I'm trying to catch myself in the act of doing this. I caught this one earlier: I plan to work on a personal project but instead I end up washing the dishes. Interestingly since catching that I don't do it anymore. Further context around this deceptively mundane topic is that I'm doing some work that involves looking at my existing tendencies with a desire to make changes. In actual fact the desire is to get more personal projects done and the approach I'm employing is better neuro lingistic programming. So naturally, seemingly mundane things come up and some prove themselves to be significant complications.
 
 So back to the original note: Answering What and How instead of Why is advised in certain self-reflection scenarios. That leads me to ask, which "What" and "How" questions are valuable?
 
