--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -19,7 +19,7 @@ So back to the original note: Answering What and How instead of Why is advised i
 
 That's one example! Compare that question to, "Why are you doing this when you said you were going to do that?". The highlighted one cuts to the chase. It eliminates waste. When it comes to well established habits in an adult, I am advised that asking, Why? – could lead me down rabbit holes. Whereas asking, What do I do instead? How do I go from intending to do one thing and instead doing another? – those kinds of questions could bring me back on track or reveal something else that needs addressing.
 
-I'm thinking this through as I write. I feels like these rabbit holes are examples of complexity in a program that isn't needed and if I can understand **what** the complexity is doing, and **how** and replace it with something simple, or simply remove it, then there is far less to be gained from going down the rabbit holes.
+I'm thinking this through as I write. I feel like these rabbit holes are examples of complexity that I don't need in the system, and if I can understand **what** the complexity is doing, and **how**, and replace it with something simple, or simply remove it, then there is far more to be gained than from going down the rabbit holes.
 
 ---
 
