--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -9,21 +9,33 @@ title: "'Why' is not important to answer when it comes to what I'm doing at a gi
 
 Before I get into this, there are other places where I espouse the importance of 'Why'. Project planning is one such place, briefing a team on work to be done is another. So meet me part way in this communication if you want to get the most out of it. I'm putting forward an idea that has value to me (the source) and through effective reinterpretation it can have value to you too (the destination).
 
-Okay, so here's a little more context: This line of thought follows on from catching myself in the act of deviating from a given plan. Or put another way, What do I do instead when I planned to do one thing but end up doing another?
+Okay, so here's a little more context: This line of thought follows on from _catching myself in the act_ of deviating from a given plan. Or put another way, What do I do instead when I planned to do one thing but end up doing another?
 
-I'm trying to catch myself in the act of doing this. I caught this one earlier: I plan to work on a personal project but instead I end up washing the dishes. Interestingly since catching that I don't do it anymore. Further context around this deceptively mundane topic is that I'm doing some work that involves looking at my existing tendencies with a desire to make changes. In actual fact the desire is to get more personal projects done and the approach I'm employing is better neuro lingistic programming. So naturally, seemingly mundane things come up and some prove themselves to be significant complications.
+I'm trying to catch myself in the act of doing this. I caught this one earlier: I plan to work on a personal project but instead I end up washing the dishes. Asking "Why" encourages very different results to asking "What" or "How".
 
-So back to the original note: Answering What and How instead of Why is advised in certain self-reflection scenarios. That leads me to ask, which "What" and "How" questions are valuable?
+A questions like, "Why didn't I work on the personal project?" – encourages an answer starting with "because", that talks about a single factor. In a system as complex as human behaviour, it is almost certainly a fools errand, to look for a simple, single factor to why we got the result that we got.
+
+So which "What" and "How" questions are more useful?
 
 > What are you seeking?
 
-That's one example! Compare that question to, "Why are you doing this when you said you were going to do that?". The highlighted one cuts to the chase. It eliminates waste. When it comes to well established habits in an adult, I am advised that asking, Why? – could lead me down rabbit holes. Whereas asking, What do I do instead? How do I go from intending to do one thing and instead doing another? – those kinds of questions could bring me back on track or reveal something else that needs addressing.
+> How did these events come to pass?
 
-I'm thinking this through as I write. I feel like these rabbit holes are examples of complexity that I don't need in the system, and if I can understand **what** the complexity is doing, and **how**, and replace it with something simple, or simply remove it, then there is far more to be gained than from going down the rabbit holes.
+> What was missing from our thinking when we thought this would be how we would get what we were seeking?
+
+There are a few examples. Compare any of those questions to, "Why are you doing this when you said you were going to do that?". The highlighted one cuts to the chase, reducing wasted time.
+
+When it comes to well established habits in an adult human, asking why will generally lead down rabbit holes. Whereas asking what you did instead? How you got from intending to do one thing to doing another?... Those questions keep you more on track or and may reveal something else that needs addressing – the real cause for the change of direction.
+
+I'm thinking this through as I write. I feel like these rabbit holes are examples of complexity that I don't need in the system, and if I can understand **what** the complexity is doing, and **how**, and replace it with something simple, or simply remove it, then there is far more to be gained.
+
+## Questions of How can be more useful, they tend to deal with specifics.
+
+This all reminds me of the "blame free culture" concept. When you gather round with a team to understand how something went wrong, what happened that lead to the event and what will have to change to prevent a similar issue arrising in future. People experienced in a blame free culture will see time spent defending decisions as wasted time. Better to stick to the hows and whats.
 
 ---
 
-This was a very raw note that is very particular to me. I'll finish it off for now by collecting the remaining, related notes from the same page:
+This note started-off life very raw and very particular to me. I've drafted it once. It's still quite raw. I'll finish off with the remaining notes from the same page:
 
 - What are the habits?
 - Styles of avoidance
