--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -25,13 +25,13 @@ So which "What" and "How" questions are more useful?
 
 There are a few examples. Compare any of those questions to, "Why are you doing this when you said you were going to do that?". The highlighted one cuts to the chase, reducing wasted time.
 
-When it comes to well established habits in an adult human, asking why will generally lead down rabbit holes. Whereas asking what you did instead? How you got from intending to do one thing to doing another?... Those questions keep you more on track or and may reveal something else that needs addressing – the real cause for the change of direction.
+When it comes to well established habits in an adult human, asking why will generally lead down rabbit holes. Whereas asking what you did instead? How you got from intending to do one thing to doing another?... Those questions keep you more on track and may reveal something else that needs addressing – the real cause for the change of direction.
 
 I'm thinking this through as I write. I feel like these rabbit holes are examples of complexity that I don't need in the system, and if I can understand **what** the complexity is doing, and **how**, and replace it with something simple, or simply remove it, then there is far more to be gained.
 
 ## Questions of How can be more useful, they tend to deal with specifics.
 
-This all reminds me of the "blame free culture" concept. When you gather round with a team to understand how something went wrong, what happened that lead to the event and what will have to change to prevent a similar issue arrising in future. People experienced in a blame free culture will see time spent defending decisions as wasted time. Better to stick to the hows and whats.
+This all reminds me of the "blame free culture" concept. When you gather round with a team to understand how something went wrong, what happened that led to the event and what will have to change to prevent a similar issue arrising in future. People experienced in a blame free culture will see time spent defending decisions as wasted time. Better to stick to the **hows** and **whats**.
 
 ---
 
