--- a/content/notes/why-is-not-always-important.mdx
+++ b/content/notes/why-is-not-always-important.mdx
@@ -35,7 +35,7 @@ This all reminds me of the "blame free culture" concept. When you gather round w
 
 ---
 
-This note started-off life very raw and very particular to me. I've drafted it once. It's still quite raw. I'll finish off with the remaining notes from the same page:
+This note started very raw and particular to me. I've redrafted it once. It's still quite raw. I'll finish off with the remaining notes from the same page:
 
 - What are the habits?
 - Styles of avoidance
