Typos and improvements to readability

--- a/content/notes/milestones-guidelines.mdx
+++ b/content/notes/milestones-guidelines.mdx
@@ -4,16 +4,16 @@ description: Working draft guidelines for commiting to, and respecting, mileston
 image: ./milestones-guidelines.jpg
 imageAlt: Photography of a stone wall running alongside a path. A bright blue sky and bright clouds are visible in the background.
 imageLink: /
-title: "Don't add to an in progress milestone ...and other guidelines that seem obvious once you put them into words"
+title: "Don't add to an in-progress milestone ...and other guidelines that seem obvious once you put them into words"
 ---
 
 Moving the goal posts during a game carries the risk of the whole co-operation breaking down.
 
 ## The Thrashing Metaphor
 
-Interrupting work in progress causes "thrashing" – meaning a degraded or crashed state caused by the system becoming unable to optimise multiple streams of work. Ironically when this occurs the failure is the result of over consuming the resources that manage the optimisation of resource-consumption.
+Interrupting work in progress causes "thrashing" – meaning a degraded or crashed state caused by the system being unable to optimise multiple streams of work. Ironically this occurs when, the resources that manage the optimisation of resource-consumption, are themselves over consumed.
 
-Thanks Akbar Zamir for this – I've taken the metaphor and run with it. It first came up when I reached out for help on how I can perform at my best even when I have multiple initiatives to focus on at the same time. It's a very useful metaphor and seems to crop up everywhere now that I'm primed to notice it.
+Thanks Akbar Zamir for sharing this metaphor with me. I've taken it and run with it. Forgive me if I haven't understood the technical origins exactly. Nonetheless, the model is transferable to my personal system. This first came up when I reached out for help on how to perform at my best even when I have multiple initiatives to focus on at the same time. It's a very useful metaphor and seems to crop up everywhere now that I'm primed.
 
 ### Anti-dotes to thrashing that have already proved effective:
 
@@ -28,4 +28,5 @@ Thanks Akbar Zamir for this – I've taken the metaphor and run with it. It firs
   You can see how that plays well with Taking baby steps.
 
 - #### Plan, journal and reflect on your own week
+
   I can't describe this one in the company of agile practitioners without remembering weekly goals, note-taking and weekly retrospectives. It's all good stuff and works for continuous improvement on an individual level too.
